# rs-chdiff

./: .gitignore  .llvm-cov-ignore  Cargo.toml  README.md  build.sh  rs-chdiff.code-workspace  rust-toolchain.toml  sonar-project.properties
.cargo/: config.toml
.github/workflows/: docker-rs.yml  rs-chdiff-build.yml  rs-chdiff-dev.yml  rs-chdiff-main.yml  rs-util-build.yml
docker-rs/: Dockerfile  compile.sh  init.sh  rust-toolchain.toml  show-coverage.sh  test.sh
src/: backup.rs  cli.rs  commands.rs  config.rs  digest.rs  filelist.rs  main.rs  patternlist.rs
src/cli/: cli.rs  cli_test.rs  def.rs  mod.rs  parse.rs
src/commands/: backup.rs  commands_test.rs  create.rs  mod.rs  verify.rs  version.rs
src/config/: config.rs  config_test.rs  def.rs  loader.rs  mod.rs  pattern_serializer.rs
src/digest/: builder.rs  calculator.rs  def.rs  digest.rs  digest_test.rs  file.rs  filelist.rs  mod.rs
src/filelist/: filelist_test.rs  patternlist.rs
src/filescanner/: file.rs  filelist.rs  filescanner_test.rs  mod.rs  pattern.rs  pattern_test.rs  patternlist.rs  patternlist_test.rs
src/tests/: cli_data.rs  mod.rs
tests/: cli_test.rs  cli_test_data.rs  config_test.rs  digest_test.rs  filescanner_test.rs  temp_fail.rs
tests/cli_data/: mod.rs
tests/common/: mod.rs
tests/config_data/: invalid-3.json  invalid_list_abs.json  invalid_list_rel.json  invalid_listentry_abs.json  invalid_listentry_rel.json  invalid_type_int_abs.json  invalid_type_int_rel.json  invalid_type_map_abs.json  invalid_type_map_rel.json  invalid_type_str_abs.json  invalid_type_str_rel.json  (+7 more)
(+8 files in other folders)
