[package]
name = "rs-chdiff"
version = "0.1.0"

description='''
Create, verify and compare hash sums on whole directory trees.
'''

edition = "2024"

[dependencies]
clap = { version = "4.5.30", features = ["cargo", "derive"] }
glob = "0.3.2"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"

[dev-dependencies]
assert_cmd = "2.0.14"
mockall = "0.13.1"
predicates = "3.1.0"
