[package]
name = "rs-chdiff"
version = "0.1.0"

description='''
Create, verify and compare hash sums on whole directory trees.
'''

edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["cargo", "derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
glob = "0.3"

[dev-dependencies]
assert_cmd = "2.0"
mockall = "0.13"
predicates = "3.1"
tempfile = "3.18"
