[package]
name = "rs-chdiff"
version = "0.1.0"

description='''
Create, verify and compare hash sums on whole directory trees.
'''

edition = "2024"

[dependencies]
clap = { version = "4", features = ["cargo", "derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
glob = "0.3"
regex = "1"
sha2 = "0.10"

[dev-dependencies]
assert_cmd = "2"
mockall = "0.13"
predicates = "3"
tempfile = "3"
